# starknet_stack

sequencer/: Cargo.toml  Makefile
sequencer/consensus/src/: consensus.rs  messages.rs
sequencer/network/src/: receiver.rs  reliable_sender.rs
sequencer/node/src/: node.rs
sequencer/verifier/: Cargo.toml
sequencer/verifier/src/: lib.rs  sequencer_utils.rs  sov_coin.rs  verifier.rs
sequencer/verifier/src/tests/: mod.rs
sequencer/verifier/src/tests/utils/: inscription
watcher_prover/: .gitignore  mix.exs
watcher_prover/lib/: watcher_prover_poller.ex
watcher_prover/lib/watcher_prover/: application.ex
watcher_prover/lib/watcher_prover_web/: router.ex
watcher_prover/lib/watcher_prover_web/controllers/: page_controller.ex
watcher_prover/native/watcher_prover/: Cargo.toml
watcher_prover/native/watcher_prover/src/: cairo.rs
watcher_prover/programs/: cairo0.json
