[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_derive = "1.0.188"

stark-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks_stark_platinum.git", rev = "3626a49101cf18c4743c47f41fdaa31fa0191ab2" }
cairo-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks_stark_platinum.git", rev = "3626a49101cf18c4743c47f41fdaa31fa0191ab2" }
serde_cbor = "0.11.1"

lambdaworks-math = { git = "https://github.com/lambdaclass/lambdaworks", rev = "af0a479"}

ord = {git = "https://github.com/edisontim/ord.git", branch = "feat/public_utils"}
bitcoincore-rpc = "0.17.0"
bitcoin = "0.30.1"

crypto = { path = "../crypto" }

serde_json = "1.0.107"
tokio = "1.32.0"

eyre = "0.6.8"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13.0"
bytes = "1.5.0"
hex = "0.4.3"