[package]
name = "watcher_prover"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "watcher_prover"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.29.1"
stark-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks_stark_platinum.git", rev = "3626a49101cf18c4743c47f41fdaa31fa0191ab2" }
cairo-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks_stark_platinum.git", rev = "3626a49101cf18c4743c47f41fdaa31fa0191ab2" }
lambdaworks-math = { git = "https://github.com/lambdaclass/lambdaworks", rev = "af0a479"}
serde_cbor = "0.11.1"
